fix: mobile player z-index

--- a/src/scss/includes/components/_modal.scss
+++ b/src/scss/includes/components/_modal.scss
@@ -21,7 +21,9 @@
     }
 
 
-    &.is-open { display: block; }
+    &.is-open { 
+        display: block; 
+    }
 
 
 
