--- a/src/scss/includes/components/player/_player-core.scss
+++ b/src/scss/includes/components/player/_player-core.scss
@@ -28,6 +28,8 @@
 
         @include breakpoint(not-desktop) {
             @include menuShiftedElement;
+
+            z-index: 3;
         }
 
         audio { display: none; }
